--- a/Entrega 4/Chilexplox/src/chilexplox/view/CamionDetalle.fxml
+++ b/Entrega 4/Chilexplox/src/chilexplox/view/CamionDetalle.fxml
@@ -1,14 +1,16 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.text.*?>
+<?import javafx.scene.image.*?>
 <?import javafx.geometry.*?>
 <?import javafx.scene.control.*?>
 <?import java.lang.*?>
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane prefHeight="337.0" prefWidth="492.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="chilexplox.view.CamionDetalleController">
+<AnchorPane prefHeight="600.0" prefWidth="1000.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="chilexplox.view.CamionDetalleController">
    <children>
-      <GridPane gridLinesVisible="true" layoutX="43.0" layoutY="49.0" prefHeight="97.0" prefWidth="407.0">
+      <GridPane gridLinesVisible="true" layoutX="51.0" layoutY="287.0" prefHeight="97.0" prefWidth="407.0">
         <columnConstraints>
           <ColumnConstraints hgrow="SOMETIMES" maxWidth="196.0" minWidth="10.0" prefWidth="145.0" />
           <ColumnConstraints hgrow="SOMETIMES" maxWidth="220.0" minWidth="4.0" prefWidth="153.0" />
@@ -30,9 +32,8 @@
             <Label fx:id="ubicacion" alignment="CENTER" prefHeight="16.0" prefWidth="295.0" text="Sin Datos" GridPane.columnIndex="1" GridPane.rowIndex="3" />
          </children>
       </GridPane>
-      <Button layoutX="288.0" layoutY="264.0" mnemonicParsing="false" onAction="#handleVolver" prefHeight="45.0" prefWidth="119.0" text="Volver al menu" />
-      <Button fx:id="btnViaje" layoutX="55.0" layoutY="264.0" mnemonicParsing="false" onAction="#handleVerViaje" prefHeight="45.0" prefWidth="119.0" text="Ver Viaje" />
-      <GridPane gridLinesVisible="true" layoutX="43.0" layoutY="183.0" prefHeight="64.0" prefWidth="407.0">
+      <Button layoutX="840.0" layoutY="33.0" mnemonicParsing="false" onAction="#handleVolver" prefHeight="67.0" prefWidth="135.0" text="Volver al menu" />
+      <GridPane gridLinesVisible="true" layoutX="51.0" layoutY="472.0" prefHeight="64.0" prefWidth="407.0">
         <columnConstraints>
           <ColumnConstraints hgrow="SOMETIMES" maxWidth="200.0" minWidth="10.0" prefWidth="196.0" />
           <ColumnConstraints hgrow="SOMETIMES" maxWidth="214.0" minWidth="10.0" prefWidth="211.0" />
@@ -51,7 +52,93 @@
             <Label fx:id="refrigerado" alignment="CENTER" prefHeight="16.0" prefWidth="295.0" text="No" GridPane.columnIndex="1" GridPane.rowIndex="2" />
          </children>
       </GridPane>
-      <Label layoutX="41.0" layoutY="161.0" prefHeight="16.0" prefWidth="230.0" text="Puede llevar pedidos:" />
-      <Label layoutX="43.0" layoutY="26.0" prefHeight="16.0" prefWidth="230.0" text="Detalles:" />
+      <ImageView fitHeight="120.0" fitWidth="500.0" layoutX="7.0" layoutY="6.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@../../../archivos/chilexplox.png" />
+         </image>
+      </ImageView>
+      <Separator layoutX="31.0" layoutY="114.0" prefHeight="0.0" prefWidth="944.0" />
+      <Text layoutX="51.0" layoutY="258.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Detalles del camion">
+         <font>
+            <Font size="17.0" />
+         </font>
+      </Text>
+      <Text layoutX="48.0" layoutY="441.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Caracteristicas Especiales de camion">
+         <font>
+            <Font size="17.0" />
+         </font>
+      </Text>
+      <ChoiceBox fx:id="medios" layoutX="143.0" layoutY="145.0" prefHeight="25.0" prefWidth="196.0" />
+      <Text layoutX="48.0" layoutY="154.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Seleccione un camion" wrappingWidth="77.48876953125">
+         <font>
+            <Font size="15.0" />
+         </font>
+      </Text>
+      <Button layoutX="369.0" layoutY="131.0" mnemonicParsing="false" onAction="#Consultar" prefHeight="53.0" prefWidth="89.0" text="Consultar" />
+      <Separator layoutX="48.0" layoutY="215.0" prefHeight="3.0" prefWidth="413.0" />
+      <TabPane fx:id="infoViaje" layoutX="540.0" layoutY="200.0" prefHeight="345.0" prefWidth="424.0" tabClosingPolicy="UNAVAILABLE" visible="false">
+         <tabs>
+            <Tab text="Viaje">
+               <content>
+                  <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
+                     <children>
+                        <GridPane gridLinesVisible="true" layoutX="88.0" layoutY="41.0" prefHeight="367.0" prefWidth="470.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                           <children>
+                              <Label alignment="CENTER" prefHeight="16.0" prefWidth="303.0" text="Origen:" />
+                              <Label alignment="CENTER" prefHeight="16.0" prefWidth="303.0" text="Destino:" GridPane.rowIndex="1" />
+                              <Label alignment="CENTER" prefHeight="16.0" prefWidth="303.0" text="Conductor:" GridPane.rowIndex="2" />
+                              <Label alignment="CENTER" prefHeight="16.0" prefWidth="303.0" text="Vehiculo:" GridPane.rowIndex="3" />
+                              <Label alignment="CENTER" prefHeight="16.0" prefWidth="303.0" text="Peso:" GridPane.rowIndex="4" />
+                              <Label fx:id="origen" alignment="CENTER" prefHeight="16.0" prefWidth="303.0" text="Sin Datos" GridPane.columnIndex="1" />
+                              <Label fx:id="destino" alignment="CENTER" prefHeight="16.0" prefWidth="303.0" text="Sin Datos" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+                              <Label fx:id="conductor" alignment="CENTER" prefHeight="16.0" prefWidth="303.0" text="Sin Datos" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+                              <Label fx:id="vehiculo" alignment="CENTER" prefHeight="16.0" prefWidth="303.0" text="Sin Datos" GridPane.columnIndex="1" GridPane.rowIndex="3" />
+                              <Label fx:id="peso" alignment="CENTER" prefHeight="16.0" prefWidth="303.0" text="Sin Datos" GridPane.columnIndex="1" GridPane.rowIndex="4" />
+                           </children>
+                           <columnConstraints>
+                              <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                              <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                           </columnConstraints>
+                           <rowConstraints>
+                              <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                              <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                              <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                              <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                              <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                           </rowConstraints>
+                        </GridPane>
+                     </children>
+                  </AnchorPane>
+               </content>
+            </Tab>
+            <Tab text="Pedidos">
+               <content>
+                  <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
+                     <children>
+                        <TableView fx:id="tabla_pedidos" layoutX="39.0" layoutY="6.0" prefHeight="272.0" prefWidth="385.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                           <columns>
+                              <TableColumn fx:id="id_pedidoColumn" prefWidth="37.0" text="ID" />
+                              <TableColumn fx:id="clienteColumn" prefWidth="128.0" text="Cliente" />
+                              <TableColumn fx:id="urgenciaColumn" prefWidth="73.0" text="Urgencia" />
+                              <TableColumn fx:id="pesoColumn" prefWidth="73.0" text="Peso" />
+                              <TableColumn fx:id="volumenColumn" prefWidth="73.0" text="Volumen" />
+                           </columns>
+                        </TableView>
+                     </children>
+                  </AnchorPane>
+               </content>
+            </Tab>
+         </tabs>
+      </TabPane>
+      <Text layoutX="540.0" layoutY="184.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Detalles del Viaje Actual del camion">
+         <font>
+            <Font size="17.0" />
+         </font>
+      </Text>
+      <Text fx:id="camionNoViajando" layoutX="540.0" layoutY="220.0" strokeType="OUTSIDE" strokeWidth="0.0" text="El Camion no se encuentra viajando en este momento.">
+         <font>
+            <Font size="14.0" />
+         </font>
+      </Text>
    </children>
 </AnchorPane>
