--- a/Entrega 4/Chilexplox/bin/chilexplox/view/Carga.fxml
+++ b/Entrega 4/Chilexplox/bin/chilexplox/view/Carga.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.shape.*?>
 <?import javafx.scene.image.*?>
 <?import javafx.scene.text.*?>
 <?import javafx.scene.control.*?>
@@ -17,15 +18,18 @@
       <Label fx:id="sucursal" layoutX="894.0" layoutY="29.0" text="sucursal" />
       <Button layoutX="491.0" layoutY="114.0" mnemonicParsing="false" onAction="#handleCargaOptima" prefHeight="56.0" prefWidth="96.0" text="Cargar Optimo" textAlignment="CENTER" wrapText="true" />
       <ChoiceBox fx:id="patente_carga" layoutX="259.0" layoutY="124.0" prefHeight="31.0" prefWidth="187.0" />
-      <TableView fx:id="tablaPedidosCargados" layoutX="653.0" layoutY="180.0" prefHeight="348.0" prefWidth="510.0">
+      <TableView fx:id="tablaPedidosCargados" layoutX="628.0" layoutY="180.0" prefHeight="348.0" prefWidth="535.0">
         <columns>
-          <TableColumn fx:id="id_pedidoColumn" prefWidth="128.0" text="ID" />
-          <TableColumn fx:id="destinoColumn" prefWidth="129.0" text="Destino" />
-            <TableColumn fx:id="prioridadColumn" prefWidth="124.0" text="Prioridad" />
-            <TableColumn fx:id="volumenColumn" prefWidth="128.0" text="Volumen" />
+          <TableColumn fx:id="id_pedidoColumn" prefWidth="45.0" resizable="false" text="ID" />
+          <TableColumn fx:id="destinoColumn" resizable="false" text="Destino" />
+            <TableColumn fx:id="prioridadColumn" prefWidth="70.0" resizable="false" text="Prioridad" />
+            <TableColumn fx:id="volumenColumn" prefWidth="70.0" resizable="false" text="Volumen" />
+            <TableColumn fx:id="fragilColumn2" prefWidth="90.0" text="Fragil" />
+            <TableColumn fx:id="radioactivoColumn2" prefWidth="90.0" text="Radioactivo" />
+            <TableColumn fx:id="refrigeradoColumn2" prefWidth="90.0" text="Refrigerado" />
         </columns>
       </TableView>
-      <ChoiceBox fx:id="sucursal_destino" layoutX="259.0" layoutY="224.0" prefHeight="31.0" prefWidth="187.0" />
+      <ChoiceBox fx:id="sucursal_destino" layoutX="259.0" layoutY="257.0" prefHeight="31.0" prefWidth="187.0" />
       <Button layoutX="1067.0" layoutY="24.0" mnemonicParsing="false" onAction="#handleVolverMenu" prefHeight="56.0" prefWidth="96.0" text="Volver al Menu" textAlignment="CENTER" wrapText="true" />
       <ImageView fitHeight="100.0" fitWidth="500.0" layoutY="2.0" pickOnBounds="true" preserveRatio="true">
          <image>
@@ -43,18 +47,21 @@
             <Font size="14.0" />
          </font>
       </Text>
-      <Text layoutX="44.0" layoutY="236.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Seleccione la sucursal de destino para el camion" wrappingWidth="194.767578125">
+      <Text layoutX="44.0" layoutY="269.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Seleccione la sucursal de destino para el camion" wrappingWidth="194.767578125">
          <font>
             <Font size="14.0" />
          </font>
       </Text>
-      <Separator layoutX="44.0" layoutY="176.0" prefHeight="3.0" prefWidth="543.0" />
-      <TableView fx:id="tablaPedidosPosibles" layoutX="44.0" layoutY="280.0" prefHeight="249.0" prefWidth="543.0">
+      <Separator layoutX="44.0" layoutY="209.0" prefHeight="3.0" prefWidth="543.0" />
+      <TableView fx:id="tablaPedidosPosibles" layoutX="44.0" layoutY="312.0" prefHeight="215.0" prefWidth="543.0">
         <columns>
-          <TableColumn fx:id="id_pedidoColumn2" prefWidth="75.0" text="ID" />
-          <TableColumn fx:id="destinoColumn2" prefWidth="75.0" text="Destino" />
-            <TableColumn fx:id="prioridadColumn2" prefWidth="75.0" text="Prioridad" />
-            <TableColumn fx:id="volumenColumn2" prefWidth="75.0" text="Volumen" />
+          <TableColumn fx:id="id_pedidoColumn2" prefWidth="62.0" resizable="false" text="ID" />
+          <TableColumn fx:id="destinoColumn2" resizable="false" text="Destino" />
+            <TableColumn fx:id="prioridadColumn2" prefWidth="70.0" resizable="false" text="Prioridad" />
+            <TableColumn fx:id="volumenColumn2" prefWidth="70.0" resizable="false" text="Volumen" />
+            <TableColumn fx:id="fragilColumn" prefWidth="87.0" resizable="false" text="Fragil" />
+            <TableColumn fx:id="radioactivoColumn" prefWidth="87.0" resizable="false" text="Radioactivo" />
+            <TableColumn fx:id="refrigeradoColumn" prefWidth="87.0" resizable="false" text="Refrigerado" />
         </columns>
          <columnResizePolicy>
             <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
@@ -62,12 +69,18 @@
       </TableView>
       <Button layoutX="259.0" layoutY="541.0" mnemonicParsing="false" onAction="#handleCargaPedidoIndividual" prefHeight="40.0" prefWidth="126.0" text="Cargar pedido" />
       <Button layoutX="1029.0" layoutY="536.0" mnemonicParsing="false" onAction="#handleGuardarCambios" prefHeight="56.0" prefWidth="134.0" text="Guardar Cambios" textAlignment="CENTER" wrapText="true" />
-      <Text layoutX="44.0" layoutY="201.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Si lo prefiere, puede cargar de manera manual" />
-      <Button layoutX="491.0" layoutY="211.0" mnemonicParsing="false" onAction="#handleVerPedidos" prefHeight="56.0" prefWidth="96.0" text="Ver Pedidos" textAlignment="CENTER" wrapText="true" />
+      <Text layoutX="44.0" layoutY="234.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Si lo prefiere, puede cargar de manera manual" />
+      <Button layoutX="491.0" layoutY="244.0" mnemonicParsing="false" onAction="#handleVerPedidos" prefHeight="56.0" prefWidth="96.0" text="Ver Pedidos" textAlignment="CENTER" wrapText="true" />
       <Text layoutX="653.0" layoutY="161.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Camion a sucursal:" />
       <Text layoutX="952.0" layoutY="161.0" strokeType="OUTSIDE" strokeWidth="0.0" text="\% Carga:" />
       <Label fx:id="carga" layoutX="1013.0" layoutY="148.0" />
       <Label fx:id="sucursalDestino" layoutX="763.0" layoutY="148.0" />
       <Button layoutX="831.0" layoutY="536.0" mnemonicParsing="false" onAction="#handleRemoverPedido" prefHeight="56.0" prefWidth="126.0" text="Remover Pedido" textAlignment="CENTER" wrapText="true" />
+      <Text layoutX="74.0" layoutY="185.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Fragil" wrappingWidth="38.11279296875" />
+      <Text layoutX="176.0" layoutY="185.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Radioactivo" wrappingWidth="87.11279296875" />
+      <Text layoutX="316.0" layoutY="185.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Refrigerado" wrappingWidth="87.11279296875" />
+      <Circle fx:id="circleFragil" fill="DODGERBLUE" layoutX="141.0" layoutY="180.0" radius="8.0" stroke="BLACK" strokeType="INSIDE" />
+      <Circle fx:id="circleRadioactivo" fill="DODGERBLUE" layoutX="281.0" layoutY="180.0" radius="8.0" stroke="BLACK" strokeType="INSIDE" />
+      <Circle fx:id="circlerefrigerado" fill="DODGERBLUE" layoutX="423.0" layoutY="180.0" radius="8.0" stroke="BLACK" strokeType="INSIDE" />
    </children>
 </AnchorPane>
